--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name = "AffPrep">Aff Prep</string>
+    <string name = "Constructive">Constructive</string>
+    <string name = "Rebuttal">Rebuttal</string>
+    <string name = "CX">CX</string>
+    <string name = "NegPrep">Neg Prep</string>
+
+    <string name = "finish">TIME\'S UP</string>
+
 </resources>
