--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,10 @@
 
     <string name="finish">TIME\'S UP</string>
     <string name="title_activity_constructive">Constructive</string>
+    <string name="switch_summary">Set prep from 8 to 10 minutes</string>
+    <string name="switch_title">10 minute prep</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
